# advent-of-code-2023

./: .gitignore  README.md
aoc-python/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
aoc-python/day00/: part1.py
aoc-python/day03/: part1.py  part2.py
aoc-python/day08/: part1.py  part2.py
aoc-python/day11/: part1.py  part2.py
aoc-python/day12/: part1.py  part2.py
aoc-python/day13/: part1.py  part2.py
aoc-python/day14/: part1.py  part2.py
aoc-python/day17/: part1.py  part2.py
aoc-python/day18/: part1.py  part2.py
aoc-python/src/: support.py
aoc-python/support/: support.py
aoc-python/support-package/: pyproject.toml  support_test.py
aoc-python/support-package/support/: __init__.py  _support.py
aoc-r/: main.R
aoc-r/R/: utils.R
aoc-r/days/day00/: part1.R
aoc-r/days/day01/: part1.R  part2.R  part2_1.R
aoc-r/days/day02/: part1.R  part2.R
aoc-r/days/day05/: part1.R  part2.R
aoc-r/days/day06/: part1.R  part2.R
aoc-r/days/day10/: part1.R  part2.R
aoc-sas/: control.sas
aoc-sas/macros/: get.sas
aocJulia/: Manifest.toml  Project.toml
aocJulia/days/: main.jl
aocJulia/days/day00/: part1.jl
aocJulia/days/day04/: part1.jl  part2.jl
aocJulia/days/day07/: part1.jl  part2.jl
aocJulia/days/day09/: part1.jl  part2.jl
aocJulia/days/day12/: part1.jl
aocJulia/days/day15/: part1.jl  part2.jl
aocJulia/days/day16/: part1.jl  part2.jl
aocJulia/src/: helpers.jl
