[project]
name = "aoc-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest",
    "numpy",
    "ipykernel",
    "support",
    "shapely>=2.1.2",
    "z3-solver>=4.15.4.0",
    "matplotlib>=3.10.8",
]

[tool.uv.sources]
support = { workspace = true }

[tool.uv.workspace]
members = [
    "support",
    "support-package",
]
